Allow names to have leading space